terraform_test/Autoscaling/subnet.tf
resource "aws_subnet" "public_main" {
    vpc_id = aws_vpc.web_server.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "true"
    tags = {
        Name = "public_main"
    }  
}
